modified:   package-lock.json 	modified:   package.json 	modified:   src/App.css 	modified:   src/Components/Todo.jsx

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,15 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 * {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 html,
 body {
@@ -19,13 +27,20 @@ body {
   position: relative;
   color: #F2613F;
   width: 100%;
-  min-height: 100%;
+  min-height: 100vh;
   background-color: #0C0C0C;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 3%;
   gap: 30px;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 .todobox h1{
   font-size: 2rem;
@@ -41,18 +56,24 @@ input[type='text']{
 }
 button{
   border: none;
-  padding: 16px;
+  padding: 10px;
   text-transform: uppercase;
   border-radius: 10px;
   background-color: #f2613f;
   color: #fff;
 }
 button:hover{
-  transform: scale(0.9);
+  -webkit-transform: scale(0.9);
+      -ms-transform: scale(0.9);
+          transform: scale(0.9);
 }
 .userInput{
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-evenly;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   width: 40%;
   height: auto;
 }
@@ -64,15 +85,19 @@ button:hover{
 }
 
 li{
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   padding: 10px;
   list-style: none;
   text-transform: capitalize;
   width: 80%;
   background-color: #fff;
   margin-bottom: 10px;
-  margin-top: 20px;
+  margin-top: 30px;
 }
 h4{
   color: white;
